--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,7 @@
   "plugins": ["react"],
   "rules": {
     "indent": ["error", 2, { "SwitchCase": 1 }],
-    "linebreak-style": ["error", "windows"],
+    "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"]
   },
